<resources>
    <string name="app_name">TO DO LIST</string>
    <string name="trabalho_2_to_do_list">Trabalho 2 - TO DO LIST</string>
    <string name="titulo_da_tarefa">Título da Tarefa</string>
    <string name="grau_da_tarefa">Grau da Tarefa</string>
    <string name="descricao">Descrição</string>
    <string name="estado_da_tarefa">Estado da Tarefa</string>
    <string name="nova_tag">NOVA TAG</string>
    <string name="nova_tarefa">NOVA TAREFA</string>
    <string name="data_da_tarefa">Data da Tarefa</string>
    <string name="cadastrar_tarefa">Cadastrar Tarefa</string>
    <string name="salvar_tarefa">Salvar Tarefa</string>
    <string name="excluir_tarefa">Excluir Tarefa</string>
    <string name="titulo_da_tag">Título da Tag</string>
    <string name="cadastrar_tag">Cadastrar Tag</string>
    <string name="lista_de_tags">Lista de Tags</string>
    <string name="lista_de_tarefas_pela_tag">Lista de Tarefas pela Tag:</string>
    <string name="listar_tags">Listar tags</string>
</resources>
