<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false" android:gravity="center">

    <EditText
            android:id="@+id/tituloTarefaEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" android:hint="@string/titulo_da_tarefa" android:layout_marginBottom="34dp"/>

    <EditText
            android:id="@+id/descricaoTarefaEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descricao"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" android:layout_marginBottom="34dp"/>

    <Spinner
            android:id="@+id/grauTarefaEditar"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="214dp"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/grau_da_tarefa"
            android:inputType="none"
            android:spinnerMode="dialog"
            android:layout_marginBottom="34dp"/>
    <Spinner
            android:id="@+id/estadoTarefaEditar"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="214dp"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/estado_da_tarefa"
            android:inputType="none"
            android:spinnerMode="dialog"

            android:layout_marginBottom="34dp"/>
    <EditText
            android:id="@+id/dataTarefaEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" android:hint="@string/data_da_tarefa"
            tools:layout_editor_absoluteY="400dp" android:layout_marginBottom="34dp"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="95dp" android:layout_marginBottom="28dp" android:id="@+id/tagsEditar"/>
    <Button
            android:id="@+id/btnSalvarTarefaEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar_tarefa"
            android:baselineAligned="false"/>
    <Button
            android:id="@+id/btnExcluirTarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluir_tarefa"
            android:baselineAligned="false" android:layout_marginTop="30dp"/>

</LinearLayout>